tests/ui/method_too_few_args.stderr
error: Too few arguments
 --> $DIR/method_too_few_args.rs:8:4
  |
8 | fn read()
  |    ^^^^
